--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ asgiref==3.2.10
 Django==1.11.29
 django-filter==1.1.0
 django-mysql==3.8.1
+django-rest-auth==0.9.5
 djangorestframework==3.11.1
-djangorestframework-filters==0.11.1
+djangorestframework-filters==0.10.2.post0
+djangorestframework-jwt==1.11.0
 mysqlclient==2.0.1
 pkg-resources==0.0.0
+PyJWT==1.7.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
